syntax = "proto3";
option java_package = "org.powertac.broker.adapter.grpc";
option java_multiple_files = true;


message XmlMessage {
    int32 counter =                         1;
    string rawMessage =                     2;
    bool parsedInJava =                     3;
}

message Booly {
    bool value = 1;
}

//Let the agent control the stepping of the server
enum ControlMessage {
    ABORT =                                 0;
    PAUSE =                                 1;
    RELEASE =                               2;
}

message ControlEvent {
    ControlMessage value =                  1;
    int64 timestamp =                       2;
}

service ServerMessagesStream{
    rpc registerListener    (Booly)               returns (stream XmlMessage){}
    rpc registerEventSource (stream XmlMessage)     returns (Booly) {}
}

service ControlEventHandler{
    rpc submitControlEvent(ControlEvent)    returns (Booly){}
}